aded new poject

--- a/portfolio-ua/index.html
+++ b/portfolio-ua/index.html
@@ -37,10 +37,7 @@
     </nav>
     <section id="profile">
       <div class="section__pic-container">
-        <img
-          src="./assets/photo.webp"
-          alt="Volodymyr Medvedchuk profie picture"
-        />
+        <img src="./assets/photo.webp" alt="Volodymyr Medvedchuk profie picture" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Привіт, я</p>
@@ -53,9 +50,7 @@
           >
             Резюме
           </button>
-          <button class="btn btn-color-1" onclick="location.href='./#contact'">
-            Контакти
-          </button>
+          <button class="btn btn-color-1" onclick="location.href='./#contact'">Контакти</button>
         </div>
         <div id="socials-container">
           <img
@@ -78,29 +73,17 @@
       <h1 class="title">Про себе</h1>
       <div class="section-container">
         <div class="section__pic-container">
-          <img
-            src="./assets/foto2.jpg"
-            alt="Profie picture"
-            class="about-pic"
-          />
+          <img src="./assets/foto2.jpg" alt="Profie picture" class="about-pic" />
         </div>
         <div class="about-details-container">
           <div class="about-containers">
             <div class="details-container">
-              <img
-                src="./assets/experience1.png"
-                alt="Experiance icon"
-                class="icon"
-              />
+              <img src="./assets/experience1.png" alt="Experiance icon" class="icon" />
               <h3>Досвід</h3>
               <p>1+рік <br />Frontend розробник</p>
             </div>
             <div class="details-container">
-              <img
-                src="./assets/education.png"
-                alt="Education icon"
-                class="icon"
-              />
+              <img src="./assets/education.png" alt="Education icon" class="icon" />
               <h3>Освіта</h3>
               <p>
                 DAN.IT education<br />Frontend розробник<br /><a
@@ -113,11 +96,10 @@
           </div>
           <div class="text-container">
             <p>
-              Шукаю пропозицію роботи на посаді Junior front-end developer в
-              компанії, яка дасть мені можливість реалізувати отримані навички
-              розробки та почати кар'єру в ІТ-індустрії. Можу бути корисним у
-              розробці функціональних додатків, написанні функціональних
-              компонентів, інших питаннях розробки. Зацікавлений у навчанні та
+              Шукаю пропозицію роботи на посаді Junior front-end developer в компанії, яка дасть
+              мені можливість реалізувати отримані навички розробки та почати кар'єру в
+              ІТ-індустрії. Можу бути корисним у розробці функціональних додатків, написанні
+              функціональних компонентів, інших питаннях розробки. Зацікавлений у навчанні та
               розширенні набутих навичок програмування.
             </p>
           </div>
@@ -139,101 +121,61 @@
             <h2 class="experience-sub-title">Frontend розробка</h2>
             <div class="article-container">
               <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
+                <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
                 <div>
                   <h3>React</h3>
                 </div>
               </article>
               <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
+                <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
                 <div>
                   <h3>Redux toolkit</h3>
                 </div>
               </article>
               <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
+                <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
                 <div>
                   <h3>Axios + Fetsh</h3>
                 </div>
               </article>
               <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
+                <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
                 <div>
                   <h3>Git / GitHub / GitLab</h3>
                 </div>
               </article>
               <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
+                <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
                 <div>
                   <h3>JavaScript</h3>
                 </div>
               </article>
               <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
+                <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
                 <div>
                   <h3>TypeScript</h3>
                 </div>
               </article>
               <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
+                <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
                 <div>
                   <h3>CodeSplitting</h3>
                 </div>
               </article>
               <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
+                <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
                 <div>
                   <h3>HTML / CSS / SCSS</h3>
                 </div>
               </article>
               <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
+                <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
                 <div>
                   <h3>Bootstrap</h3>
                 </div>
               </article>
               <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
+                <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
                 <div>
                   <h3>Material UI</h3>
                 </div>
@@ -244,41 +186,25 @@
             <h2 class="experience-sub-title">Backend розробка</h2>
             <div class="article-container">
               <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
+                <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
                 <div>
                   <h3>Node.js</h3>
                 </div>
               </article>
               <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
+                <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
                 <div>
                   <h3>Express.js</h3>
                 </div>
               </article>
               <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
+                <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
                 <div>
                   <h3>Webpack / Gulp</h3>
                 </div>
               </article>
               <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
+                <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
                 <div>
                   <h3>MongoDB</h3>
                 </div>
@@ -301,15 +227,29 @@
         <div class="about-containers">
           <div class="details-container color-container">
             <div class="article-container">
-              <img
-                src="./assets/project-2.jpg"
-                alt="Project 1"
-                class="project-img"
-              />
+              <img src="./assets/project-3.jpg" alt="Project 3" class="project-img" />
             </div>
-            <h2 class="experience-sub-title project-title">
-              Проeкт "Інтернет-магазин"
-            </h2>
+            <h2 class="experience-sub-title project-title">Проeкт "Інтернет-магазин"</h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="window.open('https://github.com/vladmeeedy/sharik-upp.git')"
+              >
+                Github
+              </button>
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="window.open('https://www.sharik-upp.com/')"
+              >
+                демо
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img src="./assets/project-2.jpg" alt="Project 1" class="project-img" />
+            </div>
+            <h2 class="experience-sub-title project-title">Проeкт "Інтернет-магазин"</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -327,15 +267,9 @@
           </div>
           <div class="details-container color-container">
             <div class="article-container">
-              <img
-                src="./assets/project-1.jpg"
-                alt="Project 1"
-                class="project-img"
-              />
+              <img src="./assets/project-1.jpg" alt="Project 1" class="project-img" />
             </div>
-            <h2 class="experience-sub-title project-title">
-              Проeкт "Інтернет-магазин"
-            </h2>
+            <h2 class="experience-sub-title project-title">Проeкт "Інтернет-магазин"</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -365,48 +299,27 @@
       <h1 class="title">Контакти</h1>
       <div class="contact-info-upper-container">
         <div class="contact-info-container">
-          <img
-            src="./assets/phone.png"
-            alt="Phone icon"
-            class="icon contact-icon"
-          />
+          <img src="./assets/phone.png" alt="Phone icon" class="icon contact-icon" />
           <p>
             <a href="tel:+380980424818">+380980424818</a>
           </p>
         </div>
         <div class="contact-info-container">
-          <img
-            src="./assets/tg.png"
-            alt="Telegram icon"
-            class="icon contact-icon"
-          />
+          <img src="./assets/tg.png" alt="Telegram icon" class="icon contact-icon" />
           <p>
             <a target="_blank" href="https://t.me/vladme777"> telegram </a>
           </p>
         </div>
         <div class="contact-info-container">
-          <img
-            src="./assets/email.png"
-            alt="Email icon"
-            class="icon contact-icon"
-          />
+          <img src="./assets/email.png" alt="Email icon" class="icon contact-icon" />
           <p>
-            <a target="_blank" href="mailto:vladmeeedy@gmail.com">
-              vladmeeedy@gmail.com
-            </a>
+            <a target="_blank" href="mailto:vladmeeedy@gmail.com"> vladmeeedy@gmail.com </a>
           </p>
         </div>
         <div class="contact-info-container">
-          <img
-            src="./assets/linkedin.png"
-            alt="linkedIn icon"
-            class="icon contact-icon"
-          />
+          <img src="./assets/linkedin.png" alt="linkedIn icon" class="icon contact-icon" />
           <p>
-            <a
-              target="_blank"
-              href="https://www.linkedin.com/in/владимир-медведчук-7239462a1"
-            >
+            <a target="_blank" href="https://www.linkedin.com/in/владимир-медведчук-7239462a1">
               linkedIn
             </a>
           </p>
