changed path linkedin

--- a/portfolio-ua/index.html
+++ b/portfolio-ua/index.html
@@ -57,7 +57,7 @@
             src="./assets/linkedin.png"
             alt="My linkedin profile"
             class="icon"
-            onclick="window.open('https://www.linkedin.com/in/владимир-медведчук-7239462a1')"
+            onclick="window.open('https://www.linkedin.com/in/volodymyr-medvedchuk/')"
           />
           <img
             src="./assets/github.png"
@@ -319,7 +319,7 @@
         <div class="contact-info-container">
           <img src="./assets/linkedin.png" alt="linkedIn icon" class="icon contact-icon" />
           <p>
-            <a target="_blank" href="https://www.linkedin.com/in/владимир-медведчук-7239462a1">
+            <a target="_blank" href="https://www.linkedin.com/in/volodymyr-medvedchuk/">
               linkedIn
             </a>
           </p>
