--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -50,7 +50,7 @@
         <div class="btn-container">
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/ВолодимирМедведчук-CV-FrontEndDeveloper.pdf')"
+            onclick="window.open('./assets/VolodymyrMedvedchuk-CV-FrontEndDeveloper.pdf')"
           >
             Download CV
           </button>
