--- a/portfolio-ua/index.html
+++ b/portfolio-ua/index.html
@@ -7,6 +7,22 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
     <link rel="icon" type="image/svg+xml" href="./assets/favicon.svg" />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="My Portfolio - Володимир Медведчук" />
+    <meta
+      property="og:description"
+      content="Frontend розробник - Досвід, Проекти, Контакти."
+    />
+    <meta
+      property="og:image"
+      content="https://volodymyr-medvedchuk.netlify.app/assets/photo.webp"
+    />
+    <meta
+      property="og:url"
+      content="https://volodymyr-medvedchuk.netlify.app"
+    />
+    <meta property="og:site_name" content="My Portfolio" />
   </head>
   <body>
     <nav id="desktop-nav">
