--- a/portfolio-ua/index.html
+++ b/portfolio-ua/index.html
@@ -372,6 +372,7 @@
               </button>
             </div>
           </div>
+
           <div class="details-container color-container">
             <div class="article-container">
               <img
@@ -393,6 +394,27 @@
               <button
                 class="btn btn-color-2 project-btn"
                 onclick="window.open('https://main--react-pizza-v2new.netlify.app/')"
+              >
+                демо
+              </button>
+            </div>
+          </div>
+
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/project-4.png"
+                alt="Project 1"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">
+              Проeкт "Односторінковий сайт з продажу курсу"
+            </h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="window.open('https://main--flower-business-course.netlify.app/')"
               >
                 демо
               </button>
