--- a/portfolio-ua/en/index.html
+++ b/portfolio-ua/en/index.html
@@ -371,6 +371,28 @@
               </button>
             </div>
           </div>
+
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="../assets/project-4.png"
+                alt="Project 1"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">
+              "One-page course sale site"
+            </h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="window.open('https://main--flower-business-course.netlify.app/')"
+              >
+                Live demo
+              </button>
+            </div>
+          </div>
+
           <div class="details-container color-container">
             <div class="article-container">
               <img
