--- a/portfolio/ua/index.html
+++ b/portfolio/ua/index.html
@@ -6,7 +6,7 @@
     <title>My Portfolio</title>
     <link rel="stylesheet" href="../style.css" />
     <link rel="stylesheet" href="../mediaqueries.css" />
-    <link rel="icon" type="image/svg+xml" href="../assets/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="../favicon.svg" />
 
     <meta property="og:type" content="website" />
     <meta property="og:title" content="My Portfolio - Володимир Медведчук" />
