--- a/portfolio/ua/index.html
+++ b/portfolio/ua/index.html
@@ -140,7 +140,7 @@
                 class="icon"
               />
               <h3>Досвід</h3>
-              <p>1+рік <br />Frontend розробник</p>
+              <p>2+рік <br />Frontend розробник</p>
             </div>
             <div class="details-container">
               <img
@@ -160,12 +160,11 @@
           </div>
           <div class="text-container">
             <p>
-              Шукаю пропозицію роботи на посаді Junior front-end developer в
-              компанії, яка дасть мені можливість реалізувати отримані навички
-              розробки та почати кар'єру в ІТ-індустрії. Можу бути корисним у
-              розробці функціональних додатків, написанні функціональних
-              компонентів, інших питаннях розробки. Зацікавлений у навчанні та
-              розширенні набутих навичок програмування.
+              Шукаю пропозицію роботи на посаді Front-end developer в компанії,
+              яка дасть мені можливість реалізувати отримані навички розробки.
+              Можу бути корисним у розробці функціональних додатків, написанні
+              функціональних компонентів, інших питаннях розробки. Зацікавлений
+              у навчанні та розширенні набутих навичок програмування.
             </p>
           </div>
         </div>
@@ -263,6 +262,16 @@
                 />
                 <div>
                   <h3>HTML / CSS / SCSS</h3>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="../assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Next.js</h3>
                 </div>
               </article>
               <article>
