--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -139,7 +139,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>1+year <br />Frontend Developer</p>
+              <p>2+year <br />Frontend Developer</p>
             </div>
             <div class="details-container">
               <img
@@ -159,13 +159,12 @@
           </div>
           <div class="text-container">
             <p>
-              I am looking for a job offer for the position of a Junior
-              front-end developer in a company that will give me the opportunity
-              to implement the acquired development skills and start a career in
-              the IT industry. I can be useful in the development of functional
-              applications, writing functional components, other issues in
-              development. Interested in learning and expanding the acquired
-              programming skills.
+              I am looking for a job offer for the position of a Front-end
+              developer in a company that will give me the opportunity to
+              implement the acquired development skills. I can be useful in the
+              development of functional applications, writing functional
+              components, other issues in development. Interested in learning
+              and expanding the acquired programming skills.
             </p>
           </div>
         </div>
@@ -263,6 +262,16 @@
                 />
                 <div>
                   <h3>HTML / CSS / SCSS</h3>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Next.js</h3>
                 </div>
               </article>
               <article>
