--- a/portfolio-ua/index.html
+++ b/portfolio-ua/index.html
@@ -432,6 +432,26 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
+                src="./assets/project-5.png"
+                alt="Project 1"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">
+              Проeкт "Односторінковий сайт з продажу товару"
+            </h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="window.open('https://comfortmarket.netlify.app/')"
+              >
+                демо
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
                 src="./assets/project-1.jpg"
                 alt="Project 1"
                 class="project-img"
