--- a/portfolio-ua/en/index.html
+++ b/portfolio-ua/en/index.html
@@ -401,6 +401,26 @@
               </button>
             </div>
           </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="../assets/project-5.png"
+                alt="Project 1"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">
+              "one-page website for selling goods"
+            </h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="window.open('https://comfortmarket.netlify.app/')"
+              >
+                Live demo
+              </button>
+            </div>
+          </div>
 
           <div class="details-container color-container">
             <div class="article-container">
