--- a/portfolio-ua/index.html
+++ b/portfolio-ua/index.html
@@ -293,6 +293,9 @@
                 <div>
                   <h3>Material UI</h3>
                 </div>
+                <div>
+                  <h3>WordPress</h3>
+                </div>
               </article>
             </div>
           </div>
@@ -423,7 +426,27 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="window.open('https://main--flower-business-course.netlify.app/')"
+                onclick="window.open('https://kievflowers.com.ua/')"
+              >
+                демо
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container">
+            <div class="article-container">
+              <img
+                src="./assets/project-6.png"
+                alt="Project 1"
+                class="project-img"
+              />
+            </div>
+            <h2 class="experience-sub-title project-title">
+              Проeкт "Cайт детективного агенства"
+            </h2>
+            <div class="btn-container">
+              <button
+                class="btn btn-color-2 project-btn"
+                onclick="window.open('https://private-detective.com.ua/')"
               >
                 демо
               </button>
