--- a/portfolio-ua/index.html
+++ b/portfolio-ua/index.html
@@ -293,6 +293,13 @@
                 <div>
                   <h3>Material UI</h3>
                 </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
                 <div>
                   <h3>WordPress</h3>
                 </div>
