--- a/portfolio-ua/index.html
+++ b/portfolio-ua/index.html
@@ -160,11 +160,10 @@
           </div>
           <div class="text-container">
             <p>
-              Шукаю пропозицію роботи на посаді Front-end developer в компанії,
-              яка дасть мені можливість реалізувати отримані навички розробки.
-              Можу бути корисним у розробці функціональних додатків, написанні
-              функціональних компонентів, інших питаннях розробки. Зацікавлений
-              у навчанні та розширенні набутих навичок програмування.
+              Front-end developer. Можу бути корисним у розробці функціональних
+              додатків, написанні функціональних компонентів, інших питаннях
+              розробки. Зацікавлений у навчанні та розширенні набутих навичок
+              програмування.
             </p>
           </div>
         </div>
